
4.0.0 2022/06/xx
  - BREAKING - Must be 3.3.0+ to upgrade to 4.x
  - BREAKING - Move to roles for some permission checking,
               userAdmin role required to edit users
  - BREAKING - the version file lives in common directory now
  - BREAKING - new defaults maxFileSizeG=12, compressES=true
  - BREAKING - pcap compression is turned on by default with simpleGzipBlockSize=32000
  - BREAKING - right-click changed to value-actions in config
  - release - cyberchef 9.46.0, node 16.16.0
  - all - Support ES 8
  - addUser.js - new --roles option, --admin creates superAdmin user
  - capture - New ecsEventDatset setting
  - capture - save sessions not saving packets for across restarts
  - capture - afpacket rewrite, improve performance & less out of order packets
  - capture - fix quic crash
  - capture/viewer - new outer fields replace gre fields (PR #1889)
  - cont3xt - new Cont3xt application, see https://arkime.com/cont3xt
  - cont3xt/viewer - share new user UI
  - db.pl - fix sync-files/add-missing trying to add non pcap files
  - db.pl - init/wipe clean up aliases that became indices
  - common - fix userAuthIps setting
  - parliament - added --insecure option
  - parliament/wise - can be configured to use shared user DB
  - viewer - fixed auth fallback to digest from header mode
  - viewer - field-actions to display configurable menu items on field labels
  - viewer - share shortcuts with specific users or roles ("arkimeUser" role = old shortcut sharing)
  - viewer - share views with specific users or roles ("arkimeUser" role = old shortcut sharing)
  - viewer - share notifiers with specific users or roles (all previous notifiers will be shared with the "arkimeUser" role)
  - viewer - share queries with specific users or roles
  - viewer - share hunts with roles
  - viewer - rework some settings UI, try and make UX similiar when adding things
  - viewer - no more _moloch_shared user