@@ -29,7 +29,8 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
                userAdmin role required to edit users
   - BREAKING - the version file lives in common directory now
   - BREAKING - new defaults maxFileSizeG=12, compressES=true
-  - BREAKING - pcap compression is turned on by default with simpleGzipBlockSize=32000
+  - BREAKING - pcap compression is turned on by default, disable with simpleCompression=none
+  - BREAKING - simpleGzipBlockSize renamed simpleCompressionBlockSize
   - BREAKING - right-click changed to value-actions in config
   - release - cyberchef 9.46.0, node 16.16.0
   - all - Support ES 8
